welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:1: error: ambiguous reference to overloaded definition,
both method backward in class BaggleSeeker of type (i: Int)Unit
and  method backward in class SimpleBuggle of type ()Unit
match expected type Unit
if (!isOverBaggle) backward
                   ^BaggleSeeker:2: error: not found: value isFrontWall
else if (!isFrontWall && isCarryingBaggle) forward
          ^BaggleSeeker:2: error: ambiguous reference to overloaded definition,
both method forward in class BaggleSeeker of type (i: Int)Unit
and  method forward in class SimpleBuggle of type ()Unit
match expected type Unit
else if (!isFrontWall && isCarryingBaggle) forward
                                           ^BaggleSeeker:3: error: not found: value isFrontWall
else if (!(isFrontWall && isCarryingBaggle)) {pickupBaggle;forward}
           ^BaggleSeeker:3: error: ambiguous reference to overloaded definition,
both method forward in class BaggleSeeker of type (i: Int)Unit
and  method forward in class SimpleBuggle of type ()Unit
match expected type Unit
else if (!(isFrontWall && isCarryingBaggle)) {pickupBaggle;forward}
                                                           ^BaggleSeeker:4: error: not found: value isFrontWall
else if (isFrontWall && isCarryingBaggle) dropBaggle 
         ^