welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.code
if (!isOverBaggle) backward
else if (!isFrontWall && isCarryingBaggle) forward
else if (!(isFrontWall && isCarryingBaggle)) {pickupBaggle;forward}
else if (isFrontWall && isCarryingBaggle) dropBaggle